inputenc na tese.tex

--- a/tese.tex
+++ b/tese.tex
@@ -197,6 +197,8 @@
 \usepackage{afterpage}
 \usepackage{capt-of}
 
+\inputencoding{latin1}
+
 \begin{document}
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \pagestyle{empty}
